@@ -3,6 +3,7 @@ package cn.har01d.alist_tvbox.service;
 import cn.har01d.alist_tvbox.config.AppProperties;
 import cn.har01d.alist_tvbox.dto.AListLogin;
 import cn.har01d.alist_tvbox.dto.AccountDto;
+import cn.har01d.alist_tvbox.dto.CheckinLog;
 import cn.har01d.alist_tvbox.dto.CheckinResponse;
 import cn.har01d.alist_tvbox.dto.CheckinResult;
 import cn.har01d.alist_tvbox.dto.RewardResponse;
@@ -26,6 +27,7 @@ import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.core.env.Environment;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -47,8 +49,8 @@ import java.time.OffsetDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -92,6 +94,7 @@ public class AccountService {
     private final TaskScheduler scheduler;
     private final ObjectMapper objectMapper;
     private final JdbcTemplate jdbcTemplate;
+    private final Environment environment;
     private ScheduledFuture scheduledFuture;
 
     public AccountService(AccountRepository accountRepository,
@@ -103,7 +106,8 @@ public class AccountService {
                           TaskScheduler scheduler,
                           RestTemplateBuilder builder,
                           ObjectMapper objectMapper,
-                          JdbcTemplate jdbcTemplate) {
+                          JdbcTemplate jdbcTemplate,
+                          Environment environment) {
         this.accountRepository = accountRepository;
         this.settingRepository = settingRepository;
         this.userRepository = userRepository;
@@ -112,6 +116,7 @@ public class AccountService {
         this.scheduler = scheduler;
         this.objectMapper = objectMapper;
         this.jdbcTemplate = jdbcTemplate;
+        this.environment = environment;
         this.aListClient = builder.rootUri("http://localhost:" + (appProperties.isHostmode() ? "5234" : "5244")).build();
         this.restTemplate = builder.build();
     }
@@ -190,7 +195,7 @@ public class AccountService {
     private void updateAliAccountId() {
         accountRepository.getFirstByMasterTrue().map(Account::getId).ifPresent(id -> {
             log.info("updateAliAccountId {}", id);
-            Utils.executeUpdate("INSERT INTO x_setting_items VALUES('ali_account_id','" + id + "','','number','',1,0)");
+            Utils.executeUpdate("INSERT INTO x_setting_items VALUES('ali_account_id','" + id + "','','number','',0,1)");
         });
     }
 
@@ -336,6 +341,9 @@ public class AccountService {
             }
         }
 
+        //Utils.execute("/downloadZx.sh");
+        //Utils.execute("/downloadPg.sh");
+
         indexService.getRemoteVersion();
     }
 
@@ -384,6 +392,7 @@ public class AccountService {
                 log.info("update refresh token {}: {}", account.getId(), time);
                 account.setRefreshTokenTime(Instant.now());
                 Map<Object, Object> response = getAliToken(account.getRefreshToken());
+                account.setNickname((String) response.get("nick_name"));
                 account.setRefreshToken((String) response.get(REFRESH_TOKEN));
                 changed = true;
             }
@@ -399,8 +408,8 @@ public class AccountService {
 
     public Map<Object, Object> getAliToken(String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put(HttpHeaders.USER_AGENT, Collections.singletonList(USER_AGENT));
-        headers.put(HttpHeaders.REFERER, Collections.singletonList("https://www.aliyundrive.com/"));
+        headers.put(HttpHeaders.USER_AGENT, List.of(USER_AGENT));
+        headers.put(HttpHeaders.REFERER, List.of("https://www.aliyundrive.com/"));
         Map<String, String> body = new HashMap<>();
         body.put(REFRESH_TOKEN, token);
         body.put("grant_type", REFRESH_TOKEN);
@@ -413,10 +422,12 @@ public class AccountService {
 
     public Map<Object, Object> getAliOpenToken(String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put(HttpHeaders.USER_AGENT, Collections.singletonList(USER_AGENT));
-        headers.put(HttpHeaders.REFERER, Collections.singletonList("https://xhofe.top/"));
+        headers.put(HttpHeaders.USER_AGENT, List.of(USER_AGENT));
+        headers.put(HttpHeaders.REFERER, List.of("https://xhofe.top/"));
         Map<String, String> body = new HashMap<>();
         body.put(REFRESH_TOKEN, token);
+        body.put("client_id", settingRepository.findById("open_api_client_id").map(Setting::getValue).orElse(""));
+        body.put("client_secret", settingRepository.findById("open_api_client_secret").map(Setting::getValue).orElse(""));
         body.put("grant_type", REFRESH_TOKEN);
         log.debug("body: {}", body);
         HttpEntity<Map<String, String>> entity = new HttpEntity<>(body, headers);
@@ -439,19 +450,19 @@ public class AccountService {
                 if (login.getUsername().equals("guest")) {
                     sql = "delete from x_users where id = 3";
                     Utils.executeUpdate(sql);
-                    sql = "update x_users set disabled = 0, username = '" + login.getUsername() + "' where id = 2";
+                    sql = "update x_users set disabled = 0 where username = 'guest'";
                     Utils.executeUpdate(sql);
                 } else {
-                    sql = "update x_users set disabled = 1 where id = 2";
+                    sql = "update x_users set disabled = 1 where username = 'guest'";
                     Utils.executeUpdate(sql);
                     sql = "delete from x_users where id = 3";
                     Utils.executeUpdate(sql);
-                    sql = "INSERT INTO x_users (id,username,password,base_path,role,permission) VALUES (3,'" + login.getUsername() + "','" + login.getPassword() + "','/',0,368)";
+                    sql = "INSERT INTO x_users (id,username,password,base_path,role,permission) VALUES (3,'" + login.getUsername() + "','" + login.getPassword() + "','/',0,372)";
                     Utils.executeUpdate(sql);
                 }
             } else {
                 log.info("enable AList guest");
-                sql = "update x_users set disabled = 0, permission = '368', password = 'guest_Api789' where id = 2";
+                sql = "update x_users set disabled = 0, permission = '368', password = 'guest_Api789' where username = 'guest'";
                 Utils.executeUpdate(sql);
                 sql = "delete from x_users where id = 3";
                 Utils.executeUpdate(sql);
@@ -542,8 +553,10 @@ public class AccountService {
 
         String token = login();
         AListUser guest = getUser(2, token);
-        guest.setDisabled(login.isEnabled());
-        updateUser(guest, token);
+        if (guest != null) {
+            guest.setDisabled(login.isEnabled());
+            updateUser(guest, token);
+        }
 
         deleteUser(3, token);
         if (login.isEnabled()) {
@@ -563,13 +576,13 @@ public class AccountService {
         request.setUsername(username);
         request.setPassword(password);
         LoginResponse response = aListClient.postForObject("/api/auth/login", request, LoginResponse.class);
-        log.debug("AList login response: {}", response.getData());
+        log.debug("AList login response: {}", response);
         return response.getData().getToken();
     }
 
     private AListUser getUser(Integer id, String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         HttpEntity<String> entity = new HttpEntity<>(null, headers);
         ResponseEntity<UserResponse> response = aListClient.exchange("/api/admin/user/get?id=" + id, HttpMethod.GET, entity, UserResponse.class);
         log.info("get AList user {} response: {}", id, response.getBody());
@@ -578,7 +591,7 @@ public class AccountService {
 
     private void deleteUser(Integer id, String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         HttpEntity<String> entity = new HttpEntity<>(null, headers);
         ResponseEntity<String> response = aListClient.exchange("/api/admin/user/delete?id=" + id, HttpMethod.POST, entity, String.class);
         log.info("delete AList user {} response: {}", id, response.getBody());
@@ -586,7 +599,7 @@ public class AccountService {
 
     private void updateUser(AListUser user, String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         HttpEntity<AListUser> entity = new HttpEntity<>(user, headers);
         ResponseEntity<String> response = aListClient.exchange("/api/admin/user/update", HttpMethod.POST, entity, String.class);
         log.info("update AList user {} response: {}", user.getId(), response.getBody());
@@ -594,7 +607,7 @@ public class AccountService {
 
     private void createUser(AListUser user, String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         HttpEntity<AListUser> entity = new HttpEntity<>(user, headers);
         ResponseEntity<String> response = aListClient.exchange("/api/admin/user/create", HttpMethod.POST, entity, String.class);
         log.info("create AList user response: {}", response.getBody());
@@ -609,6 +622,51 @@ public class AccountService {
         login.setPassword(password);
         login.setEnabled("true".equals(enabled));
         return login;
+    }
+
+    public List<CheckinLog> getCheckinLogs(Integer id) {
+        Account account = accountRepository.findById(id).orElseThrow(NotFoundException::new);
+        Map<Object, Object> map = getAliToken(account.getRefreshToken());
+        account.setNickname((String) map.get("nick_name"));
+        String accessToken = (String) map.get(ACCESS_TOKEN);
+        Map<String, Object> body = new HashMap<>();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.put(HttpHeaders.USER_AGENT, List.of(USER_AGENT));
+        headers.put(HttpHeaders.REFERER, List.of("https://www.aliyundrive.com/"));
+        headers.put("X-Canary", List.of("client=web,app=adrive,version=v2.4.0"));
+        headers.put("X-Device-Id", List.of("MpXKHKnbmzECAavdPTFxqhwD"));
+        headers.put(HttpHeaders.AUTHORIZATION, List.of("Bearer " + accessToken));
+        HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
+        ResponseEntity<CheckinResponse> response = restTemplate.exchange("https://member.aliyundrive.com/v2/activity/sign_in_list", HttpMethod.POST, entity, CheckinResponse.class);
+
+        log.debug("sign_in_list: {}", response.getBody());
+        List<CheckinLog> list = new ArrayList<>();
+        CheckinResult result = response.getBody().getResult();
+        if (result.getSignInCount() != account.getCheckinDays()) {
+            account.setCheckinDays(result.getSignInCount());
+            accountRepository.save(account);
+        }
+        LocalDate date = LocalDate.now();
+        for (Map<String, Object> signInLog : result.getSignInInfos()) {
+            date = date.withDayOfMonth(Integer.parseInt(signInLog.get("day").toString()));
+            List<Map<String, Object>> rewards = (List<Map<String, Object>>) signInLog.get("rewards");
+            CheckinLog log = new CheckinLog();
+            log.setDate(date);
+            log.setName(rewards.get(0).get("name").toString());
+            log.setStatus(rewards.get(0).get("status").toString());
+            if ("notStart".equals(log.getStatus())) {
+                break;
+            }
+            list.add(log);
+
+            log = new CheckinLog();
+            log.setDate(date);
+            log.setName(rewards.get(1).get("name").toString());
+            log.setStatus(rewards.get(1).get("status").toString());
+            list.add(log);
+        }
+        return list;
     }
 
     public CheckinResult checkin(Integer id, boolean force) {
@@ -640,9 +698,9 @@ public class AccountService {
         log.debug("body: {}", body);
 
         HttpHeaders headers = new HttpHeaders();
-        headers.put(HttpHeaders.USER_AGENT, Collections.singletonList(USER_AGENT));
-        headers.put(HttpHeaders.REFERER, Collections.singletonList("https://www.aliyundrive.com/"));
-        headers.put(HttpHeaders.AUTHORIZATION, Collections.singletonList("Bearer " + accessToken));
+        headers.put(HttpHeaders.USER_AGENT, List.of(USER_AGENT));
+        headers.put(HttpHeaders.REFERER, List.of("https://www.aliyundrive.com/"));
+        headers.put(HttpHeaders.AUTHORIZATION, List.of("Bearer " + accessToken));
         HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
         ResponseEntity<CheckinResponse> response = restTemplate.exchange("https://member.aliyundrive.com/v1/activity/sign_in_list", HttpMethod.POST, entity, CheckinResponse.class);
 
@@ -651,22 +709,26 @@ public class AccountService {
         result.setCheckinTime(now);
         account.setCheckinTime(Instant.now());
 
-        for (Map<String, Object> signInLog : result.getSignInLogs()) {
-            if (signInLog.get("status").equals("normal") && !signInLog.get("isReward").equals(true)) {
-                body = new HashMap<>();
-                body.put("signInDay", signInLog.get("day"));
-                log.debug("body: {}", body);
-
-                headers = new HttpHeaders();
-                headers.put(HttpHeaders.USER_AGENT, Collections.singletonList(USER_AGENT));
-                headers.put(HttpHeaders.REFERER, Collections.singletonList("https://www.aliyundrive.com/"));
-                headers.put(HttpHeaders.AUTHORIZATION, Collections.singletonList("Bearer " + accessToken));
-                entity = new HttpEntity<>(body, headers);
-                ResponseEntity<RewardResponse> res = restTemplate.exchange("https://member.aliyundrive.com/v1/activity/sign_in_reward?_rx-s=mobile", HttpMethod.POST, entity, RewardResponse.class);
-                log.debug("RewardResponse: {}", res.getBody());
-                log.info("今日签到获得 {} {}", res.getBody().getResult().getName(), res.getBody().getResult().getDescription());
-            }
-        }
+//        for (Map<String, Object> signInLog : result.getSignInLogs()) {
+//            if (signInLog.get("status").equals("normal") && !signInLog.get("isReward").equals(true)) {
+//                try {
+//                    body = new HashMap<>();
+//                    body.put("signInDay", signInLog.get("day"));
+//                    log.debug("body: {}", body);
+//
+//                    headers = new HttpHeaders();
+//                    headers.put(HttpHeaders.USER_AGENT, List.of(USER_AGENT));
+//                    headers.put(HttpHeaders.REFERER, List.of("https://www.aliyundrive.com/"));
+//                    headers.put(HttpHeaders.AUTHORIZATION, List.of("Bearer " + accessToken));
+//                    entity = new HttpEntity<>(body, headers);
+//                    ResponseEntity<RewardResponse> res = restTemplate.exchange("https://member.aliyundrive.com/v1/activity/sign_in_reward?_rx-s=mobile", HttpMethod.POST, entity, RewardResponse.class);
+//                    log.debug("RewardResponse: {}", res.getBody());
+//                    log.info("今日签到获得 {} {}", res.getBody().getResult().getName(), res.getBody().getResult().getDescription());
+//                } catch (Exception e) {
+//                    log.warn("领取奖励失败 {}", signInLog.get("day"), e);
+//                }
+//            }
+//        }
 
         account.setCheckinDays(result.getSignInCount());
         log.info("{}  签到成功, 本月累计{}天", account.getNickname(), account.getCheckinDays());
@@ -737,9 +799,10 @@ public class AccountService {
     private void updateTokenToAList(Account account) {
         try {
             String token = login();
-            updateTokenToAList("RefreshToken-" + account.getId(), account.getRefreshToken(), account.getRefreshTokenTime(), token);
-            updateTokenToAList("RefreshTokenOpen-" + account.getId(), account.getOpenToken(), account.getOpenTokenTime(), token);
-            updateTokenToAList("AccessTokenOpen-" + account.getId(), account.getOpenAccessToken(), account.getOpenAccessTokenTime(), token);
+            updateTokenToAList(account.getId(), "RefreshToken-" + account.getId(), account.getRefreshToken(), account.getRefreshTokenTime(), token);
+            //updateTokenToAList(account.getId(), "AccessToken-" + account.getId(), "", null, token);
+            updateTokenToAList(account.getId(), "RefreshTokenOpen-" + account.getId(), account.getOpenToken(), account.getOpenTokenTime(), token);
+            updateTokenToAList(account.getId(), "AccessTokenOpen-" + account.getId(), account.getOpenAccessToken(), account.getOpenAccessTokenTime(), token);
         } catch (Exception e) {
             log.warn("", e);
         }
@@ -794,6 +857,7 @@ public class AccountService {
         }
 
         if (tokenChanged && account.isMaster()) {
+            account.setOpenAccessToken("");
             log.info("sync tokens for account {}", account);
             updateTokenToAList(account);
         }
@@ -810,7 +874,7 @@ public class AccountService {
 
         String token = status == 2 ? login() : "";
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         Map<String, Object> body = new HashMap<>();
         body.put("key", "ali_account_id");
         body.put("type", "number");
@@ -900,7 +964,7 @@ public class AccountService {
 
     public void enableStorage(Integer id, String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         HttpEntity<String> entity = new HttpEntity<>(null, headers);
         ResponseEntity<String> response = aListClient.exchange("/api/admin/storage/enable?id=" + id, HttpMethod.POST, entity, String.class);
         log.info("enable AList storage {} response: {}", id, response.getBody());
@@ -908,7 +972,7 @@ public class AccountService {
 
     public void deleteStorage(Integer id, String token) {
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         HttpEntity<String> entity = new HttpEntity<>(null, headers);
         ResponseEntity<String> response = aListClient.exchange("/api/admin/storage/delete?id=" + id, HttpMethod.POST, entity, String.class);
         log.info("delete AList storage {} response: {}", id, response.getBody());
@@ -926,18 +990,20 @@ public class AccountService {
         }
     }
 
-    private void updateTokenToAList(String key, String value, Instant time, String token) {
-        if (StringUtils.isBlank(value)) {
+    private void updateTokenToAList(Integer accountId, String key, String value, Instant time, String token) {
+        if (StringUtils.isEmpty(value)) {
+            log.warn("Token is empty: {} {} ", accountId, key);
             return;
         }
         if (time == null) {
             time = Instant.now();
         }
         HttpHeaders headers = new HttpHeaders();
-        headers.put("Authorization", Collections.singletonList(token));
+        headers.put("Authorization", List.of(token));
         Map<String, Object> body = new HashMap<>();
         body.put("key", key);
         body.put("value", value);
+        body.put("accountId", accountId);
         body.put("modified", time.atOffset(ZONE_OFFSET).toString());
         log.debug("updateTokenToAList: {}", body);
         HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
@@ -955,11 +1021,21 @@ public class AccountService {
         return null;
     }
 
+    public String getAliOpenRefreshToken(String id) {
+        String aliSecret = settingRepository.findById(ALI_SECRET).map(Setting::getValue).orElse("");
+        if (aliSecret.equals(id)) {
+            return accountRepository.getFirstByMasterTrue()
+                    .map(Account::getOpenToken)
+                    .orElseThrow(NotFoundException::new);
+        }
+        return null;
+    }
+
     public AliTokensResponse getTokens() {
         try {
             String token = login();
             HttpHeaders headers = new HttpHeaders();
-            headers.put("Authorization", Collections.singletonList(token));
+            headers.put("Authorization", List.of(token));
             HttpEntity<String> entity = new HttpEntity<>(null, headers);
             ResponseEntity<AliTokensResponse> response = aListClient.exchange("/api/admin/token/list", HttpMethod.GET, entity, AliTokensResponse.class);
             log.debug("getTokens response: {}", response.getBody().getData());
@@ -972,7 +1048,7 @@ public class AccountService {
 
     private int syncs = 0;
 
-    @Scheduled(initialDelay = 150_000, fixedDelay = 300_000)
+    @Scheduled(initialDelay = 200_000, fixedDelay = 300_000)
     public void syncTokens() {
         if (syncs > 1 && syncs % 12 != 0) {
             syncs++;
@@ -993,19 +1069,19 @@ public class AccountService {
         List<Account> accounts = accountRepository.findAll();
         for (Account account : accounts) {
             AliToken token = map.get("RefreshToken-" + account.getId());
-            if (token != null && (account.getRefreshTokenTime() == null || token.getModified().isAfter(account.getRefreshTokenTime()))) {
+            if (token != null && StringUtils.isNotEmpty(token.getValue()) && (account.getRefreshTokenTime() == null || token.getModified().isAfter(account.getRefreshTokenTime()))) {
                 account.setRefreshToken(token.getValue());
                 account.setRefreshTokenTime(token.getModified());
             }
 
             token = map.get("RefreshTokenOpen-" + account.getId());
-            if (token != null && (account.getOpenTokenTime() == null || token.getModified().isAfter(account.getOpenTokenTime()))) {
+            if (token != null && StringUtils.isNotEmpty(token.getValue()) && (account.getOpenTokenTime() == null || token.getModified().isAfter(account.getOpenTokenTime()))) {
                 account.setOpenToken(token.getValue());
                 account.setOpenTokenTime(token.getModified());
             }
 
             token = map.get("AccessTokenOpen-" + account.getId());
-            if (token != null && (account.getOpenAccessTokenTime() == null || token.getModified().isAfter(account.getOpenAccessTokenTime()))) {
+            if (token != null && StringUtils.isNotEmpty(token.getValue()) && (account.getOpenAccessTokenTime() == null || token.getModified().isAfter(account.getOpenAccessTokenTime()))) {
                 account.setOpenAccessToken(token.getValue());
                 account.setOpenAccessTokenTime(token.getModified());
             }
@@ -1014,7 +1090,7 @@ public class AccountService {
                 updateTokenToAList(account);
             }
 
-            log.info("{} token time: {} {} {}", account.getId(), account.getRefreshTokenTime(), account.getOpenTokenTime(), account.getOpenAccessTokenTime());
+            log.info("account {} token time: {} {} {}", account.getId(), account.getRefreshTokenTime(), account.getOpenTokenTime(), account.getOpenAccessTokenTime());
         }
         accountRepository.saveAll(accounts);
     }
